[package]
name = "weighted_ld"
version = "0.1.0"
authors = ["Joe Roberts <josephroberts11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
rayon = "1.5"
log = "0.4"
structopt = "0.3"
env_logger = "0.8"
human_format = "1"
indicatif = "0.15"
packed_simd = { version = "0.3.5", package = "packed_simd_2" }
bytemuck = "1.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
approx = "0.4"

[[bench]]
name = "bench_weighted_pair_ld"
harness = false