[package]
name = "weighted-ld"
version = "0.1.0"
authors = ["Joe Roberts <josephroberts11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "weighted_ld_helper"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]


[dependencies]
numpy = "0.13"
ndarray = "0.14"
pyo3 = { version = "0.13", features = ["extension-module"] }